# crm

backend/: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  app-plan.md  conftest.py  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 6e26a76f0407_initial_migration.py  7a748ca33c23_add_invoicing_and_billing_tables.py
backend/app/: main.py
backend/app/auth/: auth.py
backend/app/core/: config.py  database.py
backend/app/crud/: customer.py  lead.py  opportunity.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: gemini_service.py  rag_service.py
backend/routers/: billing.py  chatbot.py  contacts.py  customers.py  leads.py  mail.py  opportunities.py  routers.py  users.py
backend/scripts/: fine_tune_rag.py  test_gemini.py
backend/tests/: test_ai_implementation.py  test_comprehensive.py  test_comprehensive_working.py  test_crm.py  test_fixed.py  test_simple.py  verify_implementation.py
